# MinecraftClone

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Minecraft-Clone/: CMakeLists.txt
Minecraft-Clone/assets/blocks/: blocks.yaml
Minecraft-Clone/assets/shaders/: basic.shader
Minecraft-Clone/src/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  GameCamera.h  MinecraftAPP.cpp  MinecraftApp.cpp  MinecraftLayer.cpp  MinecraftLayer.h
RealEngine/: .gitmodules  CMakeLists.txt
RealEngine/src/: RealEngine.h  repch.h
RealEngine/src/RealEngine/Core/: Application.cpp  Assert.h  Core.h  EntryPoint.h  Profiler.h  Window.cpp  Window.h
RealEngine/src/RealEngine/Events/: Event.h
RealEngine/src/RealEngine/Render/: Buffer.cpp  Buffer.h  RenderCommands.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
RealEngine/src/RealEngine/Resources/: GeneralManager.h  TextureManager.h
RealEngine/src/RealEngine/Types/: PathHash.cpp  PathHash.h
